--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,4 +1,7 @@
 <div class='grid grid-flow-col gap-2 p-10'>
+<script>
+
+</script>
     <% @products.each do |product| %>
         <div class="relative m-10 flex w-full max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md">
             <a class="relative mx-3 mt-3 flex h-60 overflow-hidden rounded-xl" href="#">
@@ -9,12 +12,17 @@
                 <div class="mt-2 mb-5 flex items-center justify-between">
                     <p><span class="text-xl font-bold text-slate-900">$<%= product.price %></span></p>
                 </div>
-                <a href="#" class="flex items-center justify-center rounded-md bg-slate-900 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-blue-300">
-                <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                </svg>
-                </a>
-                <%= button_to 'Add to cart', cart_items_path(product_id: product.id), method: :post %>
+                <div class="flex flex-wrap justify-between items-center">
+                <input placeholder="0" type="number"  class="w-28 h-11 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 rounded-md">
+                    <%= button_to cart_items_path(product_id: product.id), method: :post do%>
+                    <div class=" min-w-full flex items-center rounded-md bg-slate-900 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-blue-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>
+                        Add to cart
+                    </div>
+                    <% end %>
+                </div>
             </div>
         </div>
     <% end %>
