--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -8,13 +8,13 @@
         </svg>Remove</span>
     </div>
     <table class="w-full mt-8 font-poppins font-semibold text-zinc-400/90 border-separate border-spacing-y-3">
-        <tr class="text-left border-b-2 border-zinc-200">
+        <tr class="text-left">
             <th></th>
             <th>PRODUCT</th>
             <th class="text-center">QUANTITY</th>
             <th class="text-right">PRICE</th>
         </tr>
-        <tbody class="mt-10">
+        <tbody class="mt-10 border border-t-2 border-zinc-400">
         <% @cart_items.each do |cart_item| %>
             <tr class="font-normal text-zinc-600">
                 <td> <%= check_box_tag 'Checkbox', class: "w-8 h-8 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500"%> </td>
@@ -24,17 +24,23 @@
                 </td>
                 <td>
                     <div class="flex flex-col justify-center items-center">
+                    <!-- Button to change the item quantity -->
+                    <%= form_with model: cart_item , method: :patch, html: { id: "quantity-form-#{cart_item.id}" } do |form| %>
                         <ul class="inline-flex -space-x-px text-sm w-full justify-center mb-2">
                         <li>
-                        <a href="#" class="flex items-center justify-center px-3 h-8 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700">-</a>
+                        <button type="button" class="decrement flex items-center justify-center px-3 h-8 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700">
+                        -</button>
                         </li>
                         <li>
-                        <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700"><%= cart_item.quantity %></a>
+                        <%= form.number_field :quantity, {value: cart_item.quantity, id: "quantity-input-#{cart_item.id}", onchange: 'this.form.submit()', class: "quantity flex w-24 items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700"} %>
                         </li>
                         <li>
-                        <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700">+</a>
+                        <button type="button" class="increment flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700">
+                        +</button>
                         </li>
                         </ul>
+                    <% end %>
+                        <!-- Button to remove the cart item -->
                         <%= button_to cart_item_path(cart_item), method: :delete do %>
                         <div class="flex justify-center w-full">
                             <span class="flex items-center gap-2 font-poppins text-sm text-zinc-400 hover:text-zinc-600 transition">
@@ -46,9 +52,11 @@
                         <% end %>
                     </div>
                 </td>
-                <td class="text-right">$<%= cart_item.product.price *  cart_item.quantity%></td>
+                <td class="text-right">$<%= (cart_item.product.price * cart_item.quantity).round(2) %></td>
             </tr>
         <% end %>
         </tbody>
     </table>
 </section>
+<%= render partial: '/shared/create_account' %>
+<%= javascript_import_module_tag "cart_qty_buttons"%>
