--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container flex flex-col">
-      <%= render partial: '/shared/navbar' %>
+  <body class="w-screen h-screen bg-color{}">
+    <main class="w-full h-full">
+    <%= render partial: '/shared/navbar' %>
       <%= yield %>
     </main>
   </body>
