--- a/app/views/shared/_create_account.html.erb
+++ b/app/views/shared/_create_account.html.erb
@@ -1,7 +1,9 @@
-<h1>Send us your email</h1>
+<h1 class="text-base font-medium">Send us your email</h1>
 
 <%= form_with url: 'customer' do |form| %>
-    <%= %>
+    <%= form.text_field :name, { placeholder: 'Name', class: "px-6 py-3.5 text-base font-medium rounded-lg" } %>
+    <%= form.text_field :email, { placeholder: 'Email', class: "px-6 py-3.5 text-base font-medium rounded-lg" } %>
+    <button class="px-6 py-3.5 text-base font-medium text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 rounded-lg text-center " >Confirm</button>
 <% end %>
 
 
