--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,6 +1,7 @@
-<div class='flex flex-row'>
+<h1 class="font-poppins font-semibold text-sky-950 text-5xl pt-20 pl-20 pb-5 ">SHOP</h1>
+<div class='flex flex-wrap gap-10 px-20'>
     <% @products.each do |product| %>
-        <div class="relative m-10 flex max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md">
+        <div class="relative flex max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md">
             <a class="relative mx-3 mt-3 flex h-60 overflow-hidden rounded-xl" href="#">
                 <%= image_tag product.image, class: "object-cover w-full"%>
             </a>
@@ -10,7 +11,7 @@
                     <p><span class="text-xl font-bold text-slate-900">$<%= product.price %></span></p>
                 </div>
                     <%= form_with url: cart_items_path(product_id: product.id) do |form| %>
-                    <div class="flex flex-wrap justify-between items-center max-w-full">
+                    <div class="flex flex-wrap justify-between items-center max-w-full gap-3">
                         <%= form.number_field :quantity, value: "100", class: "w-28 h-11 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 rounded-md" %>
                         <button type="submit" class=" flex items-center rounded-md bg-slate-900 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-blue-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -18,8 +19,7 @@
                             </svg>Add to cart
                         </button>
                     </div>
-                    <% end %>
-                </div>
+                <% end %>
             </div>
         </div>
     <% end %>
