--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,19 +1,19 @@
 <h1 class="font-poppins font-semibold text-sky-950 text-5xl pt-20 pl-20 pb-5 ">SHOP</h1>
 <div class='flex flex-wrap gap-10 px-20'>
     <% @products.each do |product| %>
-        <div class="relative flex max-w-xs flex-col overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md">
-            <a class="relative mx-3 mt-3 flex h-60 overflow-hidden rounded-xl" href="#">
+        <div class="relative flex max-w-xs flex-col overflow-hidden">
+            <a class="relative mx-3 mt-3 flex h-60 overflow-hidden " href="#">
                 <%= image_tag product.image, class: "object-cover w-full"%>
             </a>
-            <div class="mt-4 px-5 pb-5">
-                <h5 class="text-lg tracking-tight text-slate-900"><%= product.name %></h5>
-                <div class="mt-2 mb-5 flex items-center justify-between">
-                    <p><span class="text-xl font-bold text-slate-900">$<%= product.price %></span></p>
+            <div class="mt-1 px-5 pb-5">
+                <h5 class="text-lg font-bold tracking-tight text-slate-700"><%= product.name %></h5>
+                <div class="mt-2 mb-3 flex items-center justify-between">
+                    <p><span class="text-md font-bold text-slate-900">$<%= product.price %></span></p>
                 </div>
                     <%= form_with url: cart_items_path(product_id: product.id) do |form| %>
                     <div class="flex flex-wrap justify-between items-center max-w-full gap-3">
-                        <%= form.number_field :quantity, value: "100", class: "w-28 h-11 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 rounded-md" %>
-                        <button type="submit" class=" flex items-center rounded-md bg-slate-900 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-blue-300">
+                        <%= form.number_field :quantity, value: "100", class: "w-28 h-11 leading-tight bg-transparent text-gray-500 border border-sky-800 hover:text-gray-700 " %>
+                        <button type="submit" class=" flex items-center bg-sky-950 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-blue-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                             </svg>Add to cart
