Fixed checkout partial

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -58,5 +58,5 @@
         </tbody>
     </table>
 </section>
-<%= render partial: '/shared/create_account' %>
+<%= render partial: '/shared/create_account', customer: @customer%>
 <%= javascript_import_module_tag "cart_qty_buttons"%>
