--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full flex items-center justify-center">
-    <img  class="w-11/12 max-w-screen-2xl" src="<%= asset_path('ecomm-web-main-page.png')%>">
+    <img  class="w-11/12 max-w-screen-2xl -mt-24 -z-10" src="<%= asset_path('ecomm-web-main-page.png')%>">
     <div class="absolute bottom-40 left-40 flex ">
         <div>
         <p class="font-poppins text-sky-950 font-light w-52 pb-5">Start building yout image, the way you want it.</p>
