--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
     <nav class="flex justify-between bg-[#d7d1cd] text-sky-950 w-screen ">
       <div class="px-5 xl:px-12 py-6 flex w-full items-center">
-        <%= link_to 'CRS Packaging', 'main', class: 'text-3xl font-normal font-poppins font-heading text-sky-950 ' %>
+      <div class=" border-4 border-sky-950 flex items-center justify-center px-2 py-1">
+        <%= link_to 'CRS', 'main', class: 'text-3xl font-bold tracking-widest font-poppins font-heading text-sky-950 ' %>
+      </div>
         <!-- Nav Links -->
         <ul class="hidden md:flex px-4 mx-auto font-semibold font-heading space-x-12">
           <li><%=link_to 'HOME', 'main', class: 'hover:text-gray-400 font-poppins font-normal' %></li>
