--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,5 @@
 <h1 class="text-center font-bold text-sky-950 text-4xl mt-10 w-lg">Who are the the people that make up CRS</h1>
+<div class="flex gap-2 flex-wrap">
+    <div>
+    </div>
+</div>
